k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  namespace: student-mgmt
  annotations:
    alb.ingress.kubernetes.io/group.name: student-mgmt-dev
